syntax = "proto3";

package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/timer";
option java_package = "ru.yandex.alice.protos.data.scenario.timer";

import "mapreduce/yt/interface/protos/extension.proto";

message TTimerDescription {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string TimerId = 1 [json_name = "timer_id", (NYT.column_name) = "timer_id"];
    uint64 StartTimestamp = 2 [json_name = "start_timestamp", (NYT.column_name) = "start_timestamp"]; // таймстемп когда был заведен таймер
    uint32 Duration = 3 [json_name = "duration", (NYT.column_name) = "duration"]; // на сколько изначально был установлен таймер (секунды)
    uint32 Remaining = 4 [json_name = "remaining", (NYT.column_name) = "remaining"]; // сколько осталось (нужно что бы после всех пауз понять: до коле!!) (секунды)
    bool CurrentlyPlaying = 5 [json_name = "currently_playing", (NYT.column_name) = "currently_playing"];
    bool Paused = 6 [json_name = "paused", (NYT.column_name) = "paused"];
}
